<resources>
    <string name="app_name">Shoes Shopping</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Username</string>
    <string name="nav_header_subtitle" translatable="false">firebaseGGlogin@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Shoes Shopping</string>
    <string name="menu_gallery" translatable="false">My cart</string>
    <string name="menu_slideshow" translatable="false">Information</string>

    <string name='orders'>Orders</string>
    <string name='setting'>Setting</string>
    <string name='home'>Home</string>
    <string name='brands'>Brands</string>
    <string name='selling'>Selling</string>
    <string name='vietnamese'>Vietnamese</string>
    <string name='english'>English</string>
    <string name='language'>Language</string>
    <string name='brand_name'>Brand name:</string>
    <string name='description'>Description:</string>
    <string name='search_question'>What do you want to search?</string>
    <string name='add_to_cart'>ADD TO CART</string>
    <string name='customer_name'>Customer name</string>
    <string name='address'>Address</string>
    <string name='phone'>Phone</string>
    <string name='order_date'>Order date:</string>
    <string name='total_amount'>Total amount:</string>
    <string name='order'>Order</string>
    <string name='confirm'>Confirm</string>
    <string name='empty_cart'>Empty cart</string>
    <string name='quantity'>Quantity:</string>
    <string-array name="language_array">
        <item>@string/vietnamese</item>
        <item>@string/english</item>
    </string-array>
    <string name="customer_information">Customer information</string>
    <string name="minimum_limit_dialog">The minimum purchase quantity for this product is 1</string>
    <string name="maximum_limit_dialog">The maximum purchase quantity for this product is 10</string>
    <string name="your_cart_has_no_products">Your cart has no products!</string>
    <string name="delete_title_dialog">Product deletion confirmation</string>
    <string name="delete_question_dialog">Are you sure you want to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="order_done">Order Success!</string>
    <string name="error_data">Not enough data!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="not_a_member">"Not a member? "</string>
    <string name="register_now">Register now</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
</resources>