<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/image_logo_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_logo_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/image_logo_login"
        android:text="@string/login"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="30sp"
        android:fontFamily="@font/baloo_tamma_2_regular"
        android:textColor="@color/title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/title_login">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/til_username">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/bg_button"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@+id/til_password"/>

    <LinearLayout
        android:id="@+id/ln_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/gray_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:paddingHorizontal="20dp"/>
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:background="@color/gray_light"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ln_login"
        android:gravity="center">
        <ImageView
            android:id="@+id/btn_google"
            android:padding="10dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_google"/>

        <ImageView
            android:id="@+id/btn_facebook"
            android:padding="10dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_facebook"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_tamma_2_regular"
            android:text="@string/not_a_member"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo_tamma_2_regular"
            android:text=" @string/register_now"
            android:textSize="15sp"
            android:textColor="@color/primary"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>